--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,7 @@
 	<classpathentry kind="lib" path="lib/ojdbc6.jar"/>
 	<classpathentry kind="lib" path="lib/rs2xml.jar"/>
 	<classpathentry kind="lib" path="lib/jdatepicker-1.3.2.jar"/>
+	<classpathentry kind="lib" path="lib/json-20220924.jar"/>
+	<classpathentry kind="lib" path="lib/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
